--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "normalize.css": "^5.0.0",
     "postcss-loader": "^1.1.0",
     "react": "^15.0.0",
+    "react-bootstrap": "^0.30.3",
+    "react-document-meta": "^2.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
@@ -121,6 +123,7 @@
     "codecov": "^1.0.1",
     "enzyme": "^2.0.0",
     "eslint": "^3.0.1",
+    "eslint-config-airbnb": "0.1.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^4.0.0",
