--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.13.0",
     "react": "^15.0.0",
+    "react-bootstrap": "^0.30.3",
+    "react-document-meta": "^2.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
@@ -120,6 +122,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "enzyme": "^2.0.0",
     "eslint": "^3.0.1",
+    "eslint-config-airbnb": "0.1.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.2.0",
