--- a/package.json
+++ b/package.json
@@ -112,7 +112,9 @@
     "yargs": "^5.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.17.0",
     "babel-eslint": "^6.0.0-beta.6",
+    "babel-loader": "^6.2.5",
     "babel-plugin-istanbul": "^2.0.1",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
@@ -121,13 +123,13 @@
     "codecov": "^1.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "enzyme": "^2.0.0",
-    "eslint": "^3.0.1",
+    "eslint": "^3.7.1",
     "eslint-config-airbnb": "0.1.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-promise": "^2.0.0",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-react": "^6.4.1",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
     "karma": "^1.0.0",
