--- a/package.json
+++ b/package.json
@@ -121,8 +121,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "enzyme": "^2.0.0",
     "eslint": "^3.0.1",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-config-standard-react": "^4.0.0",
+    "eslint-config-airbnb": "0.1.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^6.0.0",
