--- a/package.json
+++ b/package.json
@@ -98,16 +98,18 @@
     "normalize.css": "^5.0.0",
     "postcss-loader": "^1.1.0",
     "react": "^15.0.0",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-form": "^6.1.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.3",
     "yargs": "^6.3.0"
   },
   "devDependencies": {
