--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
+    "material-ui": "^0.16.1",
     "node-sass": "^3.7.0",
     "normalize.css": "^5.0.0",
     "postcss-loader": "^1.1.0",
@@ -104,6 +105,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-form": "^6.1.0",
+    "redux-form-material-ui": "^4.1.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
